--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flip_card: ^0.7.0
   intl: ^0.20.2
   flutter_native_splash: ^2.4.4
+  carousel_slider: ^5.0.0
 
 flutter_native_splash:
   color: "#EBE8BB"
